[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/PlayerSelection/Listitem.gd" type="Script" id=1]
[ext_resource path="res://art/PlayerSelection/player_frame.png" type="Texture" id=2]
[ext_resource path="res://art/PlayerSelection/name_plate.png" type="Texture" id=3]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/PlayerSelection/Patterns/ryu.png" type="Texture" id=5]
[ext_resource path="res://art/PlayerSelection/Selected.png" type="Texture" id=6]
[ext_resource path="res://art/sounds/select_low.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 17
outline_size = 2
outline_color = Color( 0.278431, 0.105882, 0.0117647, 1 )
font_data = ExtResource( 4 )

[node name="Listitem" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.3
rect_min_size = Vector2( 320, 200.1 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="item1" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.0
margin_top = -96.55
margin_right = 8.0
margin_bottom = 96.55
__meta__ = {
"_edit_group_": true
}

[node name="Frame" type="TextureRect" parent="item1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 155.0
margin_bottom = 197.9
rect_scale = Vector2( 0.52, 0.52 )
texture = ExtResource( 2 )

[node name="item1Btn" type="Button" parent="item1"]
editor/display_folded = true
anchor_top = 0.8
anchor_right = 0.2
anchor_bottom = 0.8
margin_left = 8.0
margin_top = -15.0
margin_right = 133.8
margin_bottom = 60.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="Label" type="Label" parent="item1/item1Btn"]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.3
margin_top = 0.818665
margin_bottom = 27.8187
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Sakura"
align = 1
autowrap = true

[node name="pattern" type="TextureRect" parent="item1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 50.0
margin_right = 36.0
margin_bottom = -17.1
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
stretch_mode = 6

[node name="Selected" type="Button" parent="item1"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -28.0
margin_top = -10.0
margin_right = 53.5
margin_bottom = 98.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 6 )
flat = true

[node name="Button" type="Button" parent="item1"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="item2" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 4.88
margin_top = -96.55
margin_right = 177.12
margin_bottom = 96.55
__meta__ = {
"_edit_group_": true
}

[node name="Frame" type="TextureRect" parent="item2"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.52, 0.52 )
texture = ExtResource( 2 )

[node name="item2Btn" type="Button" parent="item2"]
editor/display_folded = true
anchor_top = 0.8
anchor_right = 0.2
anchor_bottom = 0.8
margin_left = 8.0
margin_top = -15.0
margin_right = 133.0
margin_bottom = 60.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="Label2" type="Label" parent="item2/item2Btn"]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.3
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Choji"
align = 1
autowrap = true

[node name="pattern" type="TextureRect" parent="item2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 50.0
margin_right = 36.0
margin_bottom = -17.1
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="Selected" type="Button" parent="item2"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -21.12
margin_top = -7.0
margin_right = 85.88
margin_bottom = 91.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 6 )
flat = true

[node name="Button" type="Button" parent="item2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.792358
margin_right = 0.792358
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="PlayerSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 0.3

[connection signal="pressed" from="item1/item1Btn" to="." method="_on_item1Btn_pressed"]
[connection signal="pressed" from="item1/Button" to="." method="_on_item1Btn_pressed"]
[connection signal="pressed" from="item2/item2Btn" to="." method="_on_item2Btn_pressed"]
[connection signal="pressed" from="item2/Button" to="." method="_on_item2Btn_pressed"]
